<resources>
    <string name="app_name">booking_ma_tim21</string>
    <string name="booking">Booʞing</string>
    <string name="password_input_field">Enter your password</string>
    <string name="repeat_password_input_field">Repeat your password</string>
    <string name="email_input_field">Enter your email</string>
    <string name="phone_input_field">Enter your phone number</string>
    <string name="street_input_field">Enter your street</string>
    <string name="city_input_field">Enter your city</string>
    <string name="country_input_field">Enter your country</string>
    <string name="name_input_field">Enter your name</string>
    <string name="surname_input_field">Enter your surname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="main">Main</string>
    <string name="booking_app">Booʞing app</string>
    <string name="change_account">Change account</string>
    <string name="save_changes">Save changes</string>
    <string name="log_out">Log out</string>
    <string name="accommodation_creation_requests">Accommodation creation requests</string>
    <string name="accommodation_updating_requests">Accommodation updating requests</string>
    <string name="your_accommodations">Your accommodations</string>
    <string name="create_accommodation">Create accommodation</string>
    <string name="accommodation_name">Name</string>
    <string name="min_guests">Minimum number of guests</string>
    <string name="max_guests">Maximum number of guests</string>
    <string name="cancellation_days">Days for cancellations</string>
    <string name="price">Enter price</string>
    <string name="submit_price">Submit pricing</string>
    <string name="view_reservation_requests">View Reservation Requests</string>
    <string name="view_reservations">View Reservations</string>
    <string name="favorite_accommodations">Favorite Accommodations</string>
    <string name="owner_reviews">Owner Reviews</string>
    <string name="guest_report">Guest Report</string>
    <string name="owner_report">Owner Report</string>
    <string name="review_reports">Review Reports</string>
    <string name="delete_review">Delete Review</string>
    <string name="email_not_found">Email not found</string>
    <string name="report_review">Report Review</string>
    <string name="select_user">Select User</string>
    <string name="deselect_user">Currently Selected User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_reports">User Reports</string>

</resources>